# mcp-eyes-8k

./: .env.example  .gitignore  FullProject  QUICKSTART.md  README.md  SUMMARY.md  TESTING.md  TEST_REPORT.md  active_vision.py  demo_usage.py  examples.py  final_validation.py  generate_test_images.py  pyproject.toml  test_server.py  test_suite.py
