[project]
name = "mcp-eyes-8k"
version = "2.0.0"
description = "Active Vision MCP Server - Adamant Edition. A powerful image analysis tool using vision models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "groxaxo" }
]
dependencies = [
    "mcp>=1.0.0",
    "litellm>=1.0.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
